# aiml_orchestrators_asssignment

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  supervisord.conf
app/: app.py  app.py.tensor  app2.py  app3.py  appfastapi.py
docker/: Dockerfile  nginx.Dockerfile  nginx.conf
mlflow/: nohup.out
mlflow/mlruns/0/: meta.yaml
mlflow/mlruns/644979757919416345/: meta.yaml
mlflow/mlruns/644979757919416345/148fbea4c3e54fc9974723d3b5492fee/: meta.yaml
mlflow/mlruns/688274167480846939/: meta.yaml
mlflow/mlruns/688274167480846939/25eb0ad3eaad4a29b0041bff580facde/: meta.yaml
mlflow/mlruns/688274167480846939/ac12776c22e040a1b352fe27e16d5549/: meta.yaml
mlflow/mlruns/688274167480846939/c32dc237e255476faa74615e71353d7c/: meta.yaml
mlflow/mlruns/688274167480846939/f543ff7b860649c0a78b61b5d05df2d2/: meta.yaml
mlflow/mlruns/917714700599549108/: meta.yaml
mlflow/mlruns/917714700599549108/277680eb51ad47c0b40b9c4f30fcf89c/: meta.yaml
mlflow/mlruns/917714700599549108/4173e2e68e634767be47377a7a0ee8a9/: meta.yaml
models/: mnist_model_adam_0.0005.h5  mnist_model_adam_0.001.h5  mnist_model_pytorch_adam_0.0005.pth  mnist_model_pytorch_adam_0.001.pth  mnist_model_pytorch_rmsprop_0.001.pth  mnist_model_pytorch_sgd_0.01.pth  mnist_model_rmsprop_0.001.h5  mnist_model_sgd_0.01.h5
notebooks/: hwdr_model_training_initial.ipynb  hwdr_model_training_with_pytorch.ipynb  hwdr_preprocess.ipynb  nohup.out
src/: main.py
src/utils/: testMlflow.py
template/: index.html
webapp/: index.html
(+89 files in other folders)
