[project]
name="aiml_orchestrators_asssignment"
version="0.0.1"
authors=[{"name"="~manis","email"="manis@gmail.com"}]
description="This is a Sample Package"
requires-python= ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: VNIT License",
  "Operating System :: Mac/Windows"
]